@startuml
class Account {
  - balance: decimal
  - accountNumber: string
  + deposit(amount: decimal): void
  + withdraw(amount: decimal): boolean
}
class Customer {
  - name: string
  - id: string
  + getAccounts(): List<Account>
}
class Transaction {
  - amount: decimal
  - date: DateTime
}
Customer "1" --> "*" Account : owns
Account "1" --> "*" Transaction : contains
@enduml
